--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
 
 }
 
+
 h3{
     text-align: center;
     padding: 20px;
@@ -16,6 +17,7 @@ body{
     text-shadow: 1px 1px grey;
     font-size: 19px;
     margin: 15px;
+    line-height: 1.5;
 }
 h1{
     padding-left: 20px;
@@ -105,4 +107,5 @@ h2{
         top: 0;
     }
 }
+a:hover{ background-color: wheat;}
 
