--- a/styles/temples.css
+++ b/styles/temples.css
@@ -37,14 +37,22 @@ li, a{
     
     
 }
+.home{
+    padding: 40px;
+}
 
 a:hover{
-    text-decoration: underline;
-    color: white;
+    
+    border-bottom: 2px solid white;
+    padding-bottom: 2px;
 }
+
 
 h1{
     text-shadow: 1px 1px 2px blue;
+}
+.title{
+    
 }
 
 main{
@@ -52,4 +60,20 @@ main{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding:0px;
+}
+@media(max-width:780px){
+   .home-page{
+    top: 100px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.1);
+    width: 100%;
+    height: 5vh;
+    backdrop-filter: blur(20px);
+    transition: .3s;
+   }
+   nav ul{
+    flex-direction: column;
+   }
 }
