--- a/styles/temples.css
+++ b/styles/temples.css
@@ -8,6 +8,7 @@ body{
     max-width: 100%;
     padding: auto;
     text-align: center;
+    border: 1px solid black;
 }
 header, ul{
     display: flex;
@@ -62,18 +63,83 @@ main{
     padding:0px;
 }
 @media(max-width:780px){
-   .home-page{
-    top: 100px;
+    /*.home-page.responsive{
+        top: 100px;
+    }*/
+   .menu{
+    top: 80px;
     position: absolute;
     display: flex;
     justify-content: center;
-    background: rgba(255, 255, 255, 0.1);
+    background: black;
     width: 100%;
-    height: 5vh;
+    height: 35vh;
     backdrop-filter: blur(20px);
     transition: .3s;
+    left: -0.2px;
+    
    }
-   nav ul{
-    flex-direction: column;
+   main{
+    display: block;
+    justify-content: center;
+
+   }
+   .menu ul{
+        display: table-column;
+        
+        
+        
+        
+   }
+   .menu li{
+    display: grid;
+    grid-template-rows: 10px 10px 10px 10px;
+   }
+   .home{
+    position: relative;
+    top: 150px;
+   text-align: center;
+    margin-bottom: 140px;
+    margin-top: 40px;
+   }
+   /*.menu-btn{
+    display: block;
+   }
+   .menu-btn i{
+        font-size: 25px;
+        color: #fff;
+        
+   }*/
+   .menu-btn{
+        width: 40px;
+        height: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+        background-color: rgb(255, 255, 255, 0.2);
+        padding: 2.5px;
+        border-radius: 5px;
+        font-size: 25px;
+   }
+   .menu-btn span{
+    transform: 0.3s;
+   }
+   .menu-btn span {
+    width: 70%;
+    height: 5px;
+    background-color: gray;
+    border-radius: 5px;
+    transition: .3s;
+
+   }
+   .menu-btn.active span:nth-child(1) {
+    transform: translateY(5px) rotate(45deg);
+   }
+   .menu-btn.active span:nth-child(2) {
+    opacity: 0;
+   }
+   .menu-btn.active span:nth-child(3) {
+    transform: translateY(-5px) rotate(-45deg);
    }
 }
