--- a/styles/temples.css
+++ b/styles/temples.css
@@ -26,9 +26,11 @@ footer{
     background-color: black;
     padding: 20px;
     margin-top: 10px;
-    color: blue;
+    color: yellow;
 }
-
+a{
+    color: yellow;
+}
 ul{
     display: grid;
     grid-template-columns: 100px 100px 100px 100px 100px ;
@@ -36,9 +38,7 @@ ul{
 }
 li, a{
     list-style-type: none;
-    text-decoration: none;
-    
-    
+    text-decoration: none;  
 }
 .home{
     padding: 40px;
@@ -50,7 +50,6 @@ a:hover{
     padding-bottom: 2px;
 }
 
-
 h1{
     text-shadow: 1px 1px 2px blue;
 }
@@ -59,7 +58,6 @@ h1{
 }
 
 main{
-
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding:0px;
@@ -87,11 +85,7 @@ main{
 
    }
    .menu ul{
-        display: table-column;
-        
-        
-        
-        
+        display: table-column;     
    }
    .menu li{
     display: grid;
