--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -42,6 +42,7 @@ li, a{
 }
 .home{
     padding: 40px;
+    
 }
 
 a:hover{
@@ -57,7 +58,7 @@ h1{
     
 }
 
-.figure{
+main{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding:0px;
@@ -76,15 +77,14 @@ h1{
     height: 35vh;
     backdrop-filter: blur(20px);
     transition: .3s;
-    left: -0.2px; 
+    left: -0.2px;
    }
-   .figure{
+   main{
     display: block;
     justify-content: center;
 
    }
    .menu ul{
-    
         display: table-column;     
    }
    .menu li{
@@ -93,13 +93,10 @@ h1{
    }
    .home{
     position: relative;
-    top: 0;
+    top: 0px;
    text-align: center;
-    margin-bottom: 4px;
-    
-   }
-   main{
-    
+    margin-bottom: 140px;
+    margin-top: 0;
    }
    
    .menu-btn{
