--- a/styles/form.css
+++ b/styles/form.css
@@ -32,7 +32,7 @@ h1{
     text-align: center;
     justify-content: center;
 }
-.product-name{
+.products{
     margin-top: 10px;
     margin-bottom: 25px;
 }
