--- a/project/styles/about-us.css
+++ b/project/styles/about-us.css
@@ -4,3 +4,27 @@ footer{
     color: white;
     text-align: center;
 }
+body{
+    margin: 10px;
+    background-color: white;
+    border: 1px solid black;
+}
+header{
+    padding: 10px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+main{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+ .container-1{
+    border: 1px solid blue;
+    margin: 15px;
+ }
+
+ .container-2{
+    border: 1px solid blue;
+    margin: 15px;
+ }
