--- a/project/styles/service.css
+++ b/project/styles/service.css
@@ -4,3 +4,14 @@ footer{
     color: white;
     text-align: center;
 }
+
+header{
+    padding: 10px;
+    text-align: center;
+    color: white;
+    background-color: black;
+}
+body{
+    margin: 10px;
+    border: 1px solid black;
+}
