--- a/project/styles/about-us.css
+++ b/project/styles/about-us.css
@@ -17,14 +17,25 @@ header{
 }
 main{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr;
 }
  .container-1{
     border: 1px solid blue;
     margin: 15px;
+    display: grid;
+    padding: 50px;
+    font-size: 20px;
  }
 
  .container-2{
     border: 1px solid blue;
     margin: 15px;
+    display: none;
+    
  }
+ .swiched.container-2{
+    display: grid;
+}
+.swiched.container-1{
+    display: none;
+}
