--- a/project/styles/service.css
+++ b/project/styles/service.css
@@ -15,3 +15,9 @@ body{
     margin: 10px;
     border: 1px solid black;
 }
+
+.container-1{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 20px;
+}
